--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "www.linkedin.com/in/cornelius-braun"
+  linkedin         : "cornelius-braun"
   mastodon         : 
   pinterest        :
   soundcloud       :
