--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
-# main links links
+# main links
 main:
   - title: "Publications"
     url: /publications/
     
   - title: "CV"
     url: /cv/
+
+  - title: "Home"
+    url: /
